--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "doctrine/doctrine-bundle": "^2.10",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.16",
+        "easycorp/easyadmin-bundle": "^4",
         "friendsofsymfony/rest-bundle": "^3.5",
         "jms/serializer-bundle": "^5.3",
         "nelmio/cors-bundle": "^2.3",
