change database to mysql and add admin part symfony

--- a/.env
+++ b/.env
@@ -26,8 +26,8 @@ APP_SECRET=4bb384d87da0d931d37d90e92351d806
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="postgresql://book:book@127.0.0.1:5432/book?serverVersion=14.9&charset=utf8"
-#DATABASE_URL="mysql://root:@127.0.0.1:3306/symfdoct?serverVersion=8.1.0"
+#DATABASE_URL="postgresql://book:book@127.0.0.1:5432/book?serverVersion=14.9&charset=utf8"
+DATABASE_URL="mysql://root:@127.0.0.1:3306/book?serverVersion=8.1.0"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
