--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "symfony/console": "6.3.*",
         "symfony/doctrine-messenger": "6.3.*",
         "symfony/dotenv": "6.3.*",
+        "symfony/event-dispatcher": "6.3.*",
         "symfony/expression-language": "6.3.*",
         "symfony/flex": "^2",
         "symfony/form": "6.3.*",
